# django-snapshot-field

./: .pre-commit-config.yaml  .pylintrc  .travis.yml  CONTRIBUTING.md  README.md  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
docs/: Makefile
docs/source/: conf.py  index.rst
requirements/: dev.txt  docs.txt  package.txt  test.txt
snapshot_field/: __init__.py  fields.py  monkey.py  utils.py
tests/: apps.py  models.py  test_generic.py  test_model.py  test_serialization.py  test_thrid_party.py
tests/settings/: dev.py  test.py
